@@ -1,3 +1,9 @@
+2006-02-27 Francois Dechelle <francois@dechelle.net>
+
+	* Changed Java m4 autoconf macros not to exit with error if javac
+	not found
+	* Added configure summary at end of configure.in
+
 2006-02-21  Eric Viara  <viara@sysra.com>
 
 	* Improved OQL GC
